# tauri-uiicons

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
components/: element.js
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: on_input.toml
permissions/schemas/: schema.json
src/: lib.rs  plugin.rs  types.rs
src/builder/: builder.rs  mod.rs  source.rs
