[package]
name    = "tauri-uiicons"
links   = "tauri-uiicons"
version = "0.1.0"
edition = "2021"
description = "tauri plugin for ui svg icons"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blockz-code/ffbins-rs"
readme = "README.md"
keywords = ["ui", "icons", "tauri", "js", "svg"]
categories = ["development-tools"]
authors = ["p1mo <101986259+p1mo@users.noreply.github.com>"]

[package.metadata.docs.rs]
no-default-features = true
features = [
  "build",
]

[lints.rust]
unsafe_code     = "forbid"
unused          = "warn"

[features]
default = []
build = [ "dep:blake3", "dep:hex", "dep:anyhow", "dep:reqwest" ]
 
[build-dependencies]
tauri-plugin = { version = "2.5.1", features = [ "build" ] }

[dependencies]
# Tauri
tauri = { version = "2.9.3", features = [] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "2.0.3"
bincode = "1.3.3"
schemars = "1.0.2"

blake3 = { version = "1.8.3", optional = true }
hex = { version = "0.4.3", optional = true }

anyhow = { version = "1.0.102", optional = true }
reqwest = { version = "0.13.2", optional = true, features = [ "json", "blocking" ] }